# tilelang-ascend

./: .clang-format  .clang-tidy  .clangd  .coverage_combined  .coverage_test  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  0001-fix-rebase.patch  0001-reformat.patch  AGENTS.md  CMakeLists.txt  Makefile  README.md  VERSION  build_log.txt  build_log_final.txt  build_log_retry.txt  build_log_retry_v2.txt  build_log_retry_v3.txt  build_log_retry_v4.txt  build_log_retry_v5.txt  build_wheel.sh  build_wheel_ascend.sh  compile_flags.txt  coverage_report.md  format.sh  guild.md  install_ascend.sh  install_npuir.sh  pyproject.toml  requirements-build.txt  requirements-test.txt  requirements.txt  session-ses_1502.md  session-ses_223c.md  set_env.sh  setup.py  test.txt
.agents/: README.md  ascend_memory_planning_technical_doc.md  ascend_sync_insert_technical_doc.md
.agents/evals/: minimal_skill_trigger_eval.jsonl
.agents/skill-journal/: README.md
.agents/skills/: tilelang-pass-agents-guide.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: bot.yml  build-npuir.yml  build-tilelang-npuir.yml  build-tvm.yml  ci.yml  ci_ascend.yml  ci_cd.yml  ci_cd_base.yml  ci_npuir.yml  dependabot.yml  publish_docs.yml  test_npuir_wheel.yml
.opencode/agents/: README.md  tilelang-op-analyst.md  tilelang-op-developer.md  tilelang-op-orchestrator.md  tilelang-op-perf-tuner.md
_codeql_build_dir/: CMakeCache.txt  Makefile  TVMBuildOptions.txt  cmake_install.cmake
_codeql_build_dir/tvm/: Makefile  cmake_install.cmake
cmake/modules/: CodeCoverage.cmake
docker/: Dockerfile
docs/: Docker-README.md  TileLang-Ascend Programming Guide.md  TileLang-Ascend Quantized GEMM Design (A5+PTO).md  Tilelang-Ascend贡献指南.md  Tilelang算子调试指南.md  bugfix-buffer-getitem-symbolic-slice.md  coverage_guide.md  npu tilelibrary.md  tail_mask_batch1_handoff.md  安装指南.md  开发指南.md  快速入门.md
docs/QMM/: design_gemm_mx.md  pto-isa-cube-qmm-summary.md
docs/deeplearning_operators/: gemv.md
docs/developer/: EnvironmentVariables.md  npu runtime.md
docs/language/: tile_abs.md  tile_add.md  tile_axpy.md  tile_bitwise_and.md  tile_bitwise_lshift.md  tile_bitwise_not.md  tile_bitwise_or.md  tile_bitwise_rshift.md  tile_bitwise_xor.md  tile_cast.md  tile_clamp.md  tile_clamp_max.md  tile_clamp_min.md  tile_clear.md  tile_cos.md  tile_div.md  tile_exp.md  tile_fill.md  tile_leaky_relu.md  tile_ln.md  tile_max.md  tile_min.md  tile_mul.md  tile_mul_add_dst.md  tile_pow.md  tile_reciprocal.md  tile_relu.md  tile_round.md  tile_rsqrt.md  tile_sigmoid.md  tile_silu.md  tile_sin.md  tile_sqrt.md  tile_sub.md
docs/language_ref/: tilelibrary.md
docs/notebook/: aot_jit.ipynb
docs/tutorials/: automatic_workspace_allocation.md  ir_pass_trace.md  print.md  t_parallel.md  t_pipelined.md  vec_add_tutorials.md  vid_reduction_and_auto_cv_ratio.md  workspace_reduction_tutorial.md
examples/: atomic_add.py  bench_test.sh  cumsum.py  exp2.py  flash_attn_npuir.py  flash_attn_npuir_dev.py  fp8_lighting_indexer.py  log2.py  mergesort.py  mixcv_mixkernel.py  simple_sparse_att_mla.py  sparse_mla_fwd.py  sparse_mla_fwd_dynamic_shape.py  test_syncall_aiconly.py  test_syncall_aivonly.py  test_syncall_mix.py  vectorization_in_parallel.py  xa_test.py
examples/HISA/: block_sparse_mqa_attn_expert.py  block_sparse_mqa_attn_expert_test.py  paged_block_sparse_mqa_attn.py  paged_block_sparse_mqa_attn_expert.py
examples/aclgraph/: README.md  rms_rope_aclgraph.py
examples/activation/: gelu_grad.py  gelu_mul.py  gelu_mul_split.py  mis_copy_colum.py  mis_copy_row.py  sigmoid.py  sigmoidv2.py  sigmoidv2_slice.py  silu.py  swi_glu.py  swi_glu_grad.py  swi_glu_v2.py  swi_glu_y.py  tanh.py
examples/add_aot/: example_add.py
examples/adds/: example_adds.py
examples/alloc_var/: test_alloc_var.py
examples/autotune/: example_elementwise_add_autotune.py  example_elementwise_add_carver.py  example_elementwise_add_triton_autotune.py  example_gemm_autotune.py  example_gemm_carver.py  flash_attn_npuir_autotune.py  flash_attn_npuir_carver.py  gemv_autotune.py  gemv_carver.py  reduce_min_autotune.py  reduce_min_carver.py
examples/batch_gemm/: batch_gemm.py
examples/blocksparse_gemm/: design.md  example_blocksparse_gemm.py
examples/causal_conv1d/: causal_conv1d.py  design.md
examples/chunk_gated_delta_rule/: chunk_gated_delta_rule.py  chunk_gated_delta_rule_varlen.py  design.md  expert_chunk_gated_delta_rule.py  expert_chunk_gated_delta_rule_varlen.py
examples/consal_conv1d/: causal_conv1d.py  design.md
examples/convolution/: convolution_autotune_design.md  convolution_design.md  example_convolution.py  example_convolution_autotune.py
examples/copy/: copy_simple.py
examples/cross_entropy_loss/: example_cross_entro.py
examples/cumsum_gdn/: design.md  example_cumsum.py
examples/torch_tl_ascend/demo_libtorch/: CMakeLists.txt  README.md  build.sh  flash_attention.cpp  prepare.py
scripts/: check_coverage_json.py  export_coverage_to_excel.py  generate_coverage_report.py  generate_coverage_stats_report.py  generate_cpp_coverage_html.py  generate_cpp_coverage_md.py  generate_simple_html_coverage.py  generate_specific_files_coverage.py  run_coverage.sh  verify_cleanup.sh  view_cpp_coverage.py  view_cpp_coverage_detail.py  view_file_coverage.py
src/: ir.cc
tilelang/: __init__.py  env.py  libinfo.py
tilelangir/: CMakeLists.txt
tilelangir/cmake/modules/: AddTileLangIR.cmake
tilelangir/include/: CMakeLists.txt
tilelangir/include/tilelangir/: InitAllDialects.h  InitAllPasses.h
tilelangir/include/tilelangir/Transforms/: CMakeLists.txt  Passes.h  Passes.td
tilelangir/lib/: CMakeLists.txt
tilelangir/lib/Transforms/: CMakeLists.txt  CVSplit.cpp  EnableMultiBuffer.cpp  InferMemScope.cpp  InsertCVSync.cpp  InsertWorkspace.cpp  MergeCopyChains.cpp  PlanWorkspaceMemory.cpp  SpecializeCube.cpp  Vectorize.cpp  WrapHostFunction.cpp
tilelangir/python/: CMakeLists.txt  TileLangIRPasses.cpp
tilelangir/tools/: CMakeLists.txt
tilelangir/tools/tilelangir-opt/: CMakeLists.txt  tilelangir-opt.cpp
(+1340 files in other folders)
